# backend-lego8

./: db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py  0002_alter_registro_hora.py  0002_usuario_produtividade.py  0003_alter_registro_horario_fim_2_and_more.py  0003_remove_registro_hora_registro_hora_entrada_and_more.py  0004_rename_produtividade_usuario_produtividade_anterior_and_more.py  0005_logsmeses.py
lego/: settings.py  urls.py
